@@ -61,6 +61,9 @@ public class ClassFileWriter {
      * compiler.
      */
     public static class ClassFileFormatException extends RuntimeException {
+
+        private static final long serialVersionUID = 1263998431033790599L;
+
         ClassFileFormatException(String message) {
             super(message);
         }
@@ -106,7 +109,7 @@ public class ClassFileWriter {
      */
     public void addInterface(String interfaceName) {
         short interfaceIndex = itsConstantPool.addClass(interfaceName);
-        itsInterfaces.add(new Short(interfaceIndex));
+        itsInterfaces.add(Short.valueOf(interfaceIndex));
     }
 
     public static final short
