@@ -44,6 +44,10 @@
 package org.mozilla.javascript.optimizer;
 
 import org.mozilla.javascript.*;
+import org.mozilla.javascript.ast.FunctionNode;
+import org.mozilla.javascript.ast.Jump;
+import org.mozilla.javascript.ast.Name;
+import org.mozilla.javascript.ast.ScriptNode;
 import org.mozilla.classfile.*;
 import java.util.*;
 import java.lang.reflect.Constructor;
@@ -82,7 +86,7 @@ public class Codegen implements Evaluator
     }
 
     public Object compile(CompilerEnvirons compilerEnv,
-                          ScriptOrFnNode tree,
+                          ScriptNode tree,
                           String encodedSource,
                           boolean returnFunction)
     {
@@ -90,7 +94,16 @@ public class Codegen implements Evaluator
         synchronized (globalLock) {
             serial = ++globalSerialClassCounter;
         }
-        String mainClassName = "org.mozilla.javascript.gen.c"+serial;
+        
+        String baseName = "c";
+        if (tree.getSourceName().length() > 0) {
+          baseName = tree.getSourceName().replaceAll("\\W", "_");
+          if (!Character.isJavaIdentifierStart(baseName.charAt(0))) {
+            baseName = "_" + baseName;
+          }
+        }
+
+        String mainClassName = "org.mozilla.javascript.gen." + baseName + "_" + serial;
 
         byte[] mainClassBytes = compileToClassFile(compilerEnv, mainClassName,
                                                    tree, encodedSource,
@@ -123,7 +136,7 @@ public class Codegen implements Evaluator
         NativeFunction f;
         try {
             Constructor<?>ctor = cl.getConstructors()[0];
-            Object[] initArgs = { scope, cx, new Integer(0) };
+            Object[] initArgs = { scope, cx, Integer.valueOf(0) };
             f = (NativeFunction)ctor.newInstance(initArgs);
         } catch (Exception ex) {
             throw new RuntimeException
@@ -160,7 +173,7 @@ public class Codegen implements Evaluator
 
     byte[] compileToClassFile(CompilerEnvirons compilerEnv,
                               String mainClassName,
-                              ScriptOrFnNode scriptOrFn,
+                              ScriptNode scriptOrFn,
                               String encodedSource,
                               boolean returnFunction)
     {
@@ -176,7 +189,7 @@ public class Codegen implements Evaluator
             scriptOrFn = scriptOrFn.getFunctionNode(0);
         }
 
-        initScriptOrFnNodesData(scriptOrFn);
+        initScriptNodesData(scriptOrFn);
 
         this.mainClassName = mainClassName;
         this.mainClassSignature
@@ -190,7 +203,7 @@ public class Codegen implements Evaluator
     }
     
     private RuntimeException reportClassFileFormatException(
-        ScriptOrFnNode scriptOrFn,
+        ScriptNode scriptOrFn,
         String message)
     {
         String msg = scriptOrFn instanceof FunctionNode
@@ -201,7 +214,7 @@ public class Codegen implements Evaluator
             scriptOrFn.getLineno(), null, 0);
     }
 
-    private void transform(ScriptOrFnNode tree)
+    private void transform(ScriptNode tree)
     {
         initOptFunctions_r(tree);
 
@@ -221,7 +234,7 @@ public class Codegen implements Evaluator
                     if (ofn.fnode.getFunctionType()
                         == FunctionNode.FUNCTION_STATEMENT)
                     {
-                        String name = ofn.fnode.getFunctionName();
+                        String name = ofn.fnode.getName();
                         if (name.length() != 0) {
                             if (possibleDirectCalls == null) {
                                 possibleDirectCalls = new HashMap<String,OptFunctionNode>();
@@ -246,7 +259,7 @@ public class Codegen implements Evaluator
         }
     }
 
-    private static void initOptFunctions_r(ScriptOrFnNode scriptOrFn)
+    private static void initOptFunctions_r(ScriptNode scriptOrFn)
     {
         for (int i = 0, N = scriptOrFn.getFunctionCount(); i != N; ++i) {
             FunctionNode fn = scriptOrFn.getFunctionNode(i);
@@ -255,13 +268,13 @@ public class Codegen implements Evaluator
         }
     }
 
-    private void initScriptOrFnNodesData(ScriptOrFnNode scriptOrFn)
+    private void initScriptNodesData(ScriptNode scriptOrFn)
     {
         ObjArray x = new ObjArray();
-        collectScriptOrFnNodes_r(scriptOrFn, x);
+        collectScriptNodes_r(scriptOrFn, x);
 
         int count = x.size();
-        scriptOrFnNodes = new ScriptOrFnNode[count];
+        scriptOrFnNodes = new ScriptNode[count];
         x.toArray(scriptOrFnNodes);
 
         scriptOrFnIndexes = new ObjToIntMap(count);
@@ -270,13 +283,13 @@ public class Codegen implements Evaluator
         }
     }
 
-    private static void collectScriptOrFnNodes_r(ScriptOrFnNode n,
+    private static void collectScriptNodes_r(ScriptNode n,
                                                  ObjArray x)
     {
         x.add(n);
         int nestedCount = n.getFunctionCount();
         for (int i = 0; i != nestedCount; ++i) {
-            collectScriptOrFnNodes_r(n.getFunctionNode(i), x);
+            collectScriptNodes_r(n.getFunctionNode(i), x);
         }
     }
 
@@ -318,7 +331,7 @@ public class Codegen implements Evaluator
 
         int count = scriptOrFnNodes.length;
         for (int i = 0; i != count; ++i) {
-            ScriptOrFnNode n = scriptOrFnNodes[i];
+            ScriptNode n = scriptOrFnNodes[i];
 
             BodyCodegen bodygen = new BodyCodegen();
             bodygen.cfw = cfw;
@@ -418,7 +431,7 @@ public class Codegen implements Evaluator
         cfw.stopMethod((short)(firstLocal + 1));
     }
 
-    static boolean isGenerator(ScriptOrFnNode node)
+    static boolean isGenerator(ScriptNode node)
     {
         return (node.getType() == Token.FUNCTION ) &&
                 ((FunctionNode)node).isGenerator();
@@ -473,7 +486,7 @@ public class Codegen implements Evaluator
         int endlabel = cfw.acquireLabel();
 
         for (int i = 0; i < scriptOrFnNodes.length; i++) {
-            ScriptOrFnNode n = scriptOrFnNodes[i];
+            ScriptNode n = scriptOrFnNodes[i];
             cfw.markTableSwitchCase(startSwitch, i, (short)6);
             if (isGenerator(n)) {
                 String type = "(" +
@@ -562,7 +575,7 @@ public class Codegen implements Evaluator
         }
 
         for (int i = 0; i != end; ++i) {
-            ScriptOrFnNode n = scriptOrFnNodes[i];
+            ScriptNode n = scriptOrFnNodes[i];
             if (generateSwitch) {
                 if (i == 0) {
                     cfw.markTableSwitchDefault(switchStart);
@@ -863,7 +876,7 @@ public class Codegen implements Evaluator
             }
 
             for (int i = 0; i != count; ++i) {
-                ScriptOrFnNode n = scriptOrFnNodes[i];
+                ScriptNode n = scriptOrFnNodes[i];
                 if (i == 0) {
                     if (count > 1) {
                         cfw.markTableSwitchDefault(switchStart);
@@ -881,7 +894,7 @@ public class Codegen implements Evaluator
                     if (n.getType() == Token.SCRIPT) {
                         cfw.addPush("");
                     } else {
-                        String name = ((FunctionNode)n).getFunctionName();
+                        String name = ((FunctionNode)n).getName();
                         cfw.addPush(name);
                     }
                     cfw.add(ByteCode.ARETURN);
@@ -1019,7 +1032,7 @@ public class Codegen implements Evaluator
         cfw.markLabel(doInit);
 
         for (int i = 0; i != scriptOrFnNodes.length; ++i) {
-            ScriptOrFnNode n = scriptOrFnNodes[i];
+            ScriptNode n = scriptOrFnNodes[i];
             int regCount = n.getRegexpCount();
             for (int j = 0; j != regCount; ++j) {
                 String reFieldName = getCompiledRegexpName(n, j);
@@ -1090,7 +1103,7 @@ public class Codegen implements Evaluator
         cfw.stopMethod((short)0);
     }
 
-    void pushRegExpArray(ClassFileWriter cfw, ScriptOrFnNode n,
+    void pushRegExpArray(ClassFileWriter cfw, ScriptNode n,
                          int contextArg, int scopeArg)
     {
         int regexpCount = n.getRegexpCount();
@@ -1221,7 +1234,7 @@ public class Codegen implements Evaluator
                 "instance", "Ljava/lang/Object;");
     }
 
-    int getIndex(ScriptOrFnNode n)
+    int getIndex(ScriptNode n)
     {
         return scriptOrFnIndexes.getExisting(n);
     }
@@ -1231,17 +1244,36 @@ public class Codegen implements Evaluator
         return "_dt" + i;
     }
 
-    String getDirectCtorName(ScriptOrFnNode n)
+    String getDirectCtorName(ScriptNode n)
     {
-        return "_n"+getIndex(n);
+        return "_n" + getIndex(n);
     }
 
-    String getBodyMethodName(ScriptOrFnNode n)
+    String getBodyMethodName(ScriptNode n)
     {
-        return "_c"+getIndex(n);
+        return "_c_" + cleanName(n) + "_" + getIndex(n);
     }
 
-    String getBodyMethodSignature(ScriptOrFnNode n)
+    /**
+     * Gets a Java-compatible "informative" name for the the ScriptOrFnNode
+     */
+    String cleanName(final ScriptNode n)
+    {
+      String result = "";
+      if (n instanceof FunctionNode) {
+        Name name = ((FunctionNode) n).getFunctionName();
+        if (name == null) {
+          result = "anonymous";
+        } else {
+          result = name.getIdentifier();
+        }
+      } else {
+        result = "script";
+      }
+      return result;
+    }
+
+    String getBodyMethodSignature(ScriptNode n)
     {
         StringBuffer sb = new StringBuffer();
         sb.append('(');
@@ -1267,7 +1299,7 @@ public class Codegen implements Evaluator
         return "_i"+getIndex(ofn.fnode);
     }
 
-    String getCompiledRegexpName(ScriptOrFnNode n, int regexpIndex)
+    String getCompiledRegexpName(ScriptNode n, int regexpIndex)
     {
         return "_re"+getIndex(n)+"_"+regexpIndex;
     }
@@ -1314,7 +1346,7 @@ public class Codegen implements Evaluator
     private CompilerEnvirons compilerEnv;
 
     private ObjArray directCallTargets;
-    ScriptOrFnNode[] scriptOrFnNodes;
+    ScriptNode[] scriptOrFnNodes;
     private ObjToIntMap scriptOrFnIndexes;
 
     private String mainMethodClass = DEFAULT_MAIN_METHOD_CLASS;
@@ -1591,7 +1623,7 @@ class BodyCodegen
                 epilogueLabel = cfw.acquireLabel();
             }
 
-            ArrayList<Node> targets = ((FunctionNode)scriptOrFn).getResumptionPoints();
+            List<Node> targets = ((FunctionNode)scriptOrFn).getResumptionPoints();
             if (targets != null) {
                 // get resumption point
                 generateGetGeneratorResumptionPoint();
@@ -1807,7 +1839,7 @@ class BodyCodegen
             // generate locals initialization
             Map<Node,int[]> liveLocals = ((FunctionNode)scriptOrFn).getLiveLocals();
             if (liveLocals != null) {
-                ArrayList<Node> nodes = ((FunctionNode)scriptOrFn).getResumptionPoints();
+                List<Node> nodes = ((FunctionNode)scriptOrFn).getResumptionPoints();
                 for (int i = 0; i < nodes.size(); i++) {
                     Node node = nodes.get(i);
                     int[] live = liveLocals.get(node);
@@ -1931,7 +1963,12 @@ class BodyCodegen
               case Token.SCRIPT:
               case Token.BLOCK:
               case Token.EMPTY:
-                // no-ops.
+                // no-ops. 
+                if (compilerEnv.isGenerateObserverCount()) {
+                    // Need to add instruction count even for no-ops to catch
+                    // cases like while (1) {}
+                    addInstructionCount(1);
+                }
                 while (child != null) {
                     generateStatement(child);
                     child = child.getNext();
@@ -1969,7 +2006,7 @@ class BodyCodegen
               }
 
               case Token.TRY:
-                visitTryCatchFinally((Node.Jump)node, child);
+                visitTryCatchFinally((Jump)node, child);
                 break;
 
               case Token.CATCH_SCOPE:
@@ -2044,7 +2081,7 @@ class BodyCodegen
               case Token.SWITCH:
                 if (compilerEnv.isGenerateObserverCount())
                     addInstructionCount();
-                visitSwitch((Node.Jump)node, child);
+                visitSwitch((Jump)node, child);
                 break;
 
               case Token.ENTERWITH:
@@ -2138,7 +2175,7 @@ class BodyCodegen
               case Token.IFNE:
                 if (compilerEnv.isGenerateObserverCount())
                     addInstructionCount(); 
-                visitGoto((Node.Jump)node, type, child);
+                visitGoto((Jump)node, type, child);
                 break;
 
               case Token.FINALLY:
@@ -2607,11 +2644,13 @@ class BodyCodegen
                         +")Ljava/lang/Object;");
                 }
                 else {
-                    addScriptRuntimeInvoke(
+                    cfw.addALoad(variableObjectLocal);
+                	addScriptRuntimeInvoke(
                         "getObjectElem",
                         "(Ljava/lang/Object;"
                         +"Ljava/lang/Object;"
                         +"Lorg/mozilla/javascript/Context;"
+                        +"Lorg/mozilla/javascript/Scriptable;"
                         +")Ljava/lang/Object;");
                 }
                 break;
@@ -2784,6 +2823,7 @@ class BodyCodegen
                       case Token.REF_NS_NAME:
                         methodName = "nameRef";
                         signature = "(Ljava/lang/Object;"
+                                    +"Ljava/lang/Object;"
                                     +"Lorg/mozilla/javascript/Context;"
                                     +"Lorg/mozilla/javascript/Scriptable;"
                                     +"I"
@@ -3071,7 +3111,7 @@ class BodyCodegen
         return labelId;
     }
 
-    private void visitGoto(Node.Jump node, int type, Node child)
+    private void visitGoto(Jump node, int type, Node child)
     {
         Node target = node.target;
         if (type == Token.IFEQ || type == Token.IFNE) {
@@ -3601,11 +3641,13 @@ Else pass the JS object in the aReg and 0.0 in the dReg.
                 String property = id.getString();
                 cfw.addPush(property);
                 cfw.addALoad(contextLocal);
+                cfw.addALoad(variableObjectLocal);
                 addScriptRuntimeInvoke(
                     "getPropFunctionAndThis",
                     "(Ljava/lang/Object;"
                     +"Ljava/lang/String;"
                     +"Lorg/mozilla/javascript/Context;"
+                    +"Lorg/mozilla/javascript/Scriptable;"
                     +")Lorg/mozilla/javascript/Callable;");
             } else {
                 // Optimizer do not optimize this case for now
@@ -3663,7 +3705,7 @@ Else pass the JS object in the aReg and 0.0 in the dReg.
         cfw.addLineNumberEntry((short)itsLineNumber);
     }
 
-    private void visitTryCatchFinally(Node.Jump node, Node child)
+    private void visitTryCatchFinally(Jump node, Node child)
     {
         /* Save the variable object, in case there are with statements
          * enclosed by the try block and we catch some exception.
@@ -3861,7 +3903,7 @@ Else pass the JS object in the aReg and 0.0 in the dReg.
         return true;
     }
 
-    private void visitSwitch(Node.Jump switchNode, Node child)
+    private void visitSwitch(Jump switchNode, Node child)
     {
         // See comments in IRFactory.createSwitch() for description
         // of SWITCH node
@@ -3871,9 +3913,9 @@ Else pass the JS object in the aReg and 0.0 in the dReg.
         short selector = getNewWordLocal();
         cfw.addAStore(selector);
 
-        for (Node.Jump caseNode = (Node.Jump)child.getNext();
+        for (Jump caseNode = (Jump)child.getNext();
              caseNode != null;
-             caseNode = (Node.Jump)caseNode.getNext())
+             caseNode = (Jump)caseNode.getNext())
         {
             if (caseNode.getType() != Token.CASE)
                 throw Codegen.badTree();
@@ -3933,7 +3975,7 @@ Else pass the JS object in the aReg and 0.0 in the dReg.
     /**
      * Save the current code offset. This saved code offset is used to
      * compute instruction counts in subsequent calls to
-     * {@link #addInstructionCount}.
+     * {@link #addInstructionCount()}.
      */
     private void saveCurrentCodeOffset() {
         savedCodeOffset = cfw.getCurrentCodeOffset();
@@ -3942,12 +3984,25 @@ Else pass the JS object in the aReg and 0.0 in the dReg.
     /**
      * Generate calls to ScriptRuntime.addInstructionCount to keep track of
      * executed instructions and call <code>observeInstructionCount()</code>
-     * if a threshold is exceeded.
+     * if a threshold is exceeded.<br>
+     * Calculates the count from getCurrentCodeOffset - savedCodeOffset
      */
     private void addInstructionCount() {
         int count = cfw.getCurrentCodeOffset() - savedCodeOffset;
         if (count == 0)
             return;
+        addInstructionCount(count);
+    }
+
+    /**
+     * Generate calls to ScriptRuntime.addInstructionCount to keep track of
+     * executed instructions and call <code>observeInstructionCount()</code>
+     * if a threshold is exceeded.<br>
+     * Takes the count as a parameter - used to add monitoring to loops and 
+     * other blocks that don't have any ops - this allows
+     * for monitoring/killing of while(true) loops and such.
+     */
+    private void addInstructionCount(int count) {
         cfw.addALoad(contextLocal);
         cfw.addPush(count);
         addScriptRuntimeInvoke("addInstructionCount",
@@ -4605,11 +4660,13 @@ Else pass the JS object in the aReg and 0.0 in the dReg.
                 +")Ljava/lang/Object;");
         } else {
             cfw.addALoad(contextLocal);
+            cfw.addALoad(variableObjectLocal);
             addScriptRuntimeInvoke(
                 "getObjectProp",
                 "(Ljava/lang/Object;"
                 +"Ljava/lang/String;"
                 +"Lorg/mozilla/javascript/Context;"
+                +"Lorg/mozilla/javascript/Scriptable;"
                 +")Ljava/lang/Object;");
         }
     }
@@ -4979,7 +5036,7 @@ Else pass the JS object in the aReg and 0.0 in the dReg.
     ClassFileWriter cfw;
     Codegen codegen;
     CompilerEnvirons compilerEnv;
-    ScriptOrFnNode scriptOrFn;
+    ScriptNode scriptOrFn;
     public int scriptOrFnIndex;
     private int savedCodeOffset;
 
@@ -5021,7 +5078,7 @@ Else pass the JS object in the aReg and 0.0 in the dReg.
 
     private Map<Node,FinallyReturnPoint> finallys;
 
-    class FinallyReturnPoint {
+    static class FinallyReturnPoint {
         public List<Integer> jsrPoints  = new ArrayList<Integer>();
         public int tableLabel = 0;        
     }
